--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_small">8dp</dimen>
     <dimen name="padding_medium">14dp</dimen>
     <dimen name="padding_height">32dp</dimen>
+    <dimen name="max_height">300dp</dimen>
 </resources>
