--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="padding_medium">14dp</dimen>
     <dimen name="padding_cardhome">16dp</dimen>
     <dimen name="padding_height">32dp</dimen>
+    <dimen name="padding_top_height">64dp</dimen>
     <dimen name="max_height">500dp</dimen>
 </resources>
